<resources>

    <string name="about_my_fz_app">About My Fitness Zone App</string>
    <string name="aerobic_exercise">AEROBIC EXERCISE</string>
    <string name="aerobic_exercise_duration">(minimum 30 minutes a day)</string>
    <string name="aerobic_exercise_text">\u2022 Raises your heart rate
        \n\u2022 Uses the large muscles of the body (arms, legs, back)
        \n\u2022 Decreases risk of chronic disease
        \n\u2022 Helps you lose weight</string>
    <string name="app_name">Fitness Zone</string>
    <string name="arms">Arms</string>
    <string name="arm_workout">Arm Workout</string>
    <string name="before_you_start_text">\u2022 Start slowly. Warm up for 5 to 10 minutes with easy
        stretching or brisk walking.
        \n\u2022 Take it easy. Moderate exercise can benefit you as much as intense exercise.
        \n\u2022 Read and understand all exercise instructions.</string>
    <string name="before_you_start_title">Before You Start</string>
    <string name="cardio">Cardio</string>
    <string name="cardio_time">Cardio\nTime</string>
    <string name="cardio_workout">Cardio Workout</string>
    <string name="choose_an_exercise">Choose An Exercise</string>
    <string name="complete_exercise_program">A Complete Exercise Program Includes 3 Types of
        Activity:</string>
    <string name="cultivate_health">Cultivate Health, Regis University</string>
    <string name="daily_workout_tracker">Daily Workout Tracker</string>
    <string name="developer_button_text">Developer biography.\nLearn more</string>
    <string name="developer_text">Click here to learn more about the Developer</string>
    <string name="developer_title">Developer</string>
    <string name="exercise_name">Exercise Name:\u0020\u0020</string>
    <string name="exercise_tips">Exercise Tips</string>
    <string name="find_a_fz">Find a Fitness Zone</string>
    <string name="fitness_equipment_and_exercises">Fitness Equipment and Exercises</string>
    <string name="fitness_equipment_benefits">Fitness Equipment Benefits</string>
    <string name="fitness_equipment_benefits_button">Fitness Equipment Benefits.
        \nLearn More</string>
    <string name="fitness_equipment_exercises">Fitness Equipment Exercises</string>
    <string name="fitness_journal">Fitness Journal</string>
    <string name="friday">Friday</string>
    <string name="fz_text">In many neighborhoods, places to exercise are too scarce, too far away,
        or too expensive. The Trust for Public Land\'s Fitness Zone® program puts outdoor gyms where
        they are needed most. Installed in existing parks, Fitness Zone area\'s top-quality, durable
        exercise gear is free and easy to use, appropriate for teens and adults of all levels of
        fitness, and resistant to weather and vandalism. Most important, Fitness Zone areas are
        fun!</string>
    <string name="fz_title">What is a Fitness Zone?</string>
    <string name="get_active">GET ACTIVE</string>
    <string name="get_active_text">Try to be active every day. Even if you\'ve never exercised or
        haven\'t exercised in many years, you can benefit from fitness at any age.</string>
    <string name="health_benefits">Health Benefits</string>
    <string name="instructions">Instructions For Use</string>
    <string name="learn_more">Learn More</string>
    <string name="lbs">lbs</string>
    <string name="legs">Legs</string>
    <string name="leg_workout">Leg Workout</string>
    <string name="monday">Monday</string>
    <string name="muscles_used">Muscles Used</string>
    <string name="my_fitness_goal">My Fitness Goal</string>
    <string name="my_progress">My Progress</string>
    <string name="my_workout">My Workout</string>
    <string name="number_of_workouts_tracked">Number of Workouts Tracked:\u0020\u0020</string>
    <string name="project_partners_text">Click a logo to learn more about each Project Partner</string>
    <string name="project_partners_title">Project Partners</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="regis">Regis University</string>
    <string name="repetitions">Repetitions:\u0020\u0020</string>
    <string name="reps_set1">Reps\nSet 1</string>
    <string name="reps_set2">Reps\nSet 2</string>
    <string name="reps_set3">Reps\nSet 3</string>
    <string name="rest_between_sets">Rest Between Sets:\u0020\u0020</string>
    <string name="saturday">Saturday</string>
    <string name="save">SAVE</string>
    <string name="select_your_workout">Select Your Workout</string>
    <string name="set_workout_date_button">SET WORKOUT DATE</string>
    <string name="sets">Sets:\u0020\u0020</string>
    <string name="strength_building">STRENGTH-BUILDING</string>
    <string name="strength_building_duration">(minimum 10 minutes a day)</string>
    <string name="strength_building_text">\u2022 Increases strength
        \n\u2022 Improves balance
        \n\u2022 Increases bone density</string>
    <string name="stretching">STRETCHING</string>
    <string name="stretching_duration">(minimum 5 to 10 minutes a day)</string>
    <string name="stretching_text">\u2022 Loosens stiff joints
        \n\u2022 Lengthens and loosens muscles</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="title_activity_location">Map</string>
    <string name="todays_focus">Today\'s Focus:</string>
    <string name="tpl">The Trust for Public Land</string>
    <string name="tuesday">Tuesday</string>
    <string name="type_of_activity">Type of Activity\u0020\u0020-\u0020\u0020</string>
    <string name="wednesday">Wednesday</string>
    <string name="weight_current">Current Weight:</string>
    <string name="weight_starting">Starting Weight:</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to
        demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable
        the \'my location\' layer. Please try again and grant access to use the location.\nIf the
        permission has been permanently denied, it can be enabled from the System Settings &gt;
        Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>



</resources>
