<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_health_benefits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.tpl.fitnesszone.activity.HealthBenefitsActivity">

    <!--Toolbar / ActionBar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/fz_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/complete_exercise_program_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!--Get Active Title and Text-->
            <TableRow
                android:weightSum="1">
                <TextView
                    android:id="@+id/get_active_title"
                    android:text="@string/get_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/get_active_text"
                    android:text="@string/get_active_text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Before You Start Title and Text-->
            <TableRow
                android:weightSum="1">
                <TextView
                    android:id="@+id/before_you_start_title"
                    android:text="@string/before_you_start_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/before_you_start_text"
                    android:text="@string/before_you_start_text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <View
                android:layout_height="2dp"
                android:background="#FF909090"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <!--Complete Exercise Program Title-->
            <TableRow>
                <TextView
                    android:id="@+id/complete_exercise_program_title"
                    android:text="@string/complete_exercise_program"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Aerobic Exercise Title and Duration-->
            <TableRow
                android:weightSum="1">
                <TextView
                    android:id="@+id/aerobic_exercise_title"
                    android:text="@string/aerobic_exercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/aerobic_exercise_duration"
                    android:text="@string/aerobic_exercise_duration"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Aerobic Exercise Icon/Image and Text-->
            <TableRow
                android:weightSum="1">
                <ImageView
                    android:id="@+id/aerobic_exercise_icon"
                    android:src="@drawable/ic_workout_cardio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/aerobic_exercise_text"
                    android:text="@string/aerobic_exercise_text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Strength Bldg Title and Duration-->
            <TableRow
                android:weightSum="1">
                <TextView
                    android:id="@+id/strength_building_title"
                    android:text="@string/strength_building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/strength_building_duration"
                    android:text="@string/strength_building_duration"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Strength Bldg Icon/Image and Text-->
            <TableRow
                android:weightSum="1">
                <ImageView
                    android:id="@+id/strength_building_icon"
                    android:src="@drawable/ic_workout_arm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/strength_building_text"
                    android:text="@string/strength_building_text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Stretching Title and Duration-->
            <TableRow
                android:weightSum="1">
                <TextView
                    android:id="@+id/stretching_title"
                    android:text="@string/stretching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/stretching_duration"
                    android:text="@string/stretching_duration"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <!--Stretching Icon/Image and Text-->
            <TableRow
                android:weightSum="1">
                <ImageView
                    android:id="@+id/stretching_icon"
                    android:src="@drawable/ic_workout_leg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/stretching_text"
                    android:text="@string/stretching_text"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:padding="3dp"
                    android:layout_marginBottom="10dp"/>
            </TableRow>

            <View
                android:layout_height="2dp"
                android:background="#FF909090"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <!--Fitness Equipment Icon and Button-->
            <TableRow
                android:weightSum="1">
                <ImageView
                    android:id="@+id/fitness_equipment_icon"
                    android:src="@drawable/ic_fitness_equipment_50x34"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:padding="3dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:maxWidth="120dp"/>
                <Button
                    android:id="@+id/fitness_equipment_benefits_button"
                    android:text="@string/fitness_equipment_benefits_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:textSize="12sp"
                    android:padding="3dp" />
            </TableRow>
        </TableLayout>

    </ScrollView>


</LinearLayout>
