<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Toolbar / ActionBar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/fz_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!--Home Title-->
    <TextView
        android:id="@+id/home_title"
        android:text="@string/get_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp" />

    <!--Button - Find a Fitness Zone-->
    <Button
        android:id="@+id/find_a_fz"
        android:text="@string/find_a_fz"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_fz_location_50x75"
        android:drawableStart="@drawable/ic_fz_location_50x75"
        android:onClick="openLocationUI"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp" />

    <!--Button - Health Benefits-->
    <Button
        android:id="@+id/health_benefits"
        android:text="@string/health_benefits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_health_benefits_50x44"
        android:drawableStart="@drawable/ic_health_benefits_50x44"
        android:onClick="openHealthBenefitsUI"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp" />

    <!--Button - My Workout-->
    <Button
        android:id="@+id/my_workout"
        android:text="@string/my_workout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_my_workout_50x75"
        android:drawableStart="@drawable/ic_my_workout_50x75"
        android:onClick="openMyWorkoutUI"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp" />

    <!--Button - Fitness Journal-->
    <Button
        android:id="@+id/fitness_journal"
        android:text="@string/fitness_journal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_fitness_journal_50x59"
        android:drawableStart="@drawable/ic_fitness_journal_50x59"
        android:onClick="openFitnessJournalUI"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp" />

    <!--Button - About My Fitness Zone-->
    <Button
        android:id="@+id/about_my_fz_app"
        android:text="@string/about_my_fz_app"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_about_fz_50x52"
        android:drawableStart="@drawable/ic_about_fz_50x52"
        android:onClick="openAboutUI"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp" />

</LinearLayout>
